# ContainerServer

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  ContainerServer inno script.iss  README.md  build.ninja  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  server.cpp  server.h  xmlreader.cpp  xmlreader.h
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QLabel.30A7F3092F15B273.idx  main.cpp.6AD915A80F4E1EAB.idx  mainwindow.cpp.2953CC403D005969.idx  mainwindow.h.158044876C12EBEC.idx  qabstractitemdelegate.h.0E361DFE3B280E0D.idx  qabstractitemview.h.B9C88B28B44805C0.idx  qabstractscrollarea.h.AC7BC06579CAC6D8.idx  qabstractslider.h.ECFC1CAE94E9F832.idx  qabstractspinbox.h.65FF0774F6E77B1C.idx  qcomparehelpers.h.558C017C662B9FEF.idx  qdeadlinetimer.h.4BB090CA9F989DD8.idx  qflags.h.4487AD5154F79EA7.idx  qframe.h.F48DEAD2D29EE53A.idx  qitemselectionmodel.h.48670DE9E97F4A9D.idx  qlabel.h.6FEDC070B9C22EAA.idx  qlist.h.9F239AD8C61A35B2.idx  qmetatype.h.8D73A70E72D95A5A.idx  qnativeinterface.h.E0AE56348D214A1A.idx  qobject.h.E8715582428E4057.idx  qpicture.h.0C1944A72DE9871A.idx  qpushbutton.h.9277E7BAD88B3AA5.idx  qregularexpression.h.8BCD693DB5EE0442.idx  qrubberband.h.1A1C8EAE665470B1.idx  qshareddata.h.71BACC7A1A3552AB.idx  qslider.h.655389F8DBF2CEE0.idx  qstyle.h.9526D0E421C6D8CA.idx  qstyleoption.h.5F04211AE083B925.idx  qtabbar.h.779DFD0309BB7BAD.idx  qtableview.h.56AE514B14EB173D.idx  qtclasshelpermacros.h.4AF52C609522AD61.idx  qtcpserver.h.7F648468E4BC9543.idx  (+9 more)
ContainerServer_autogen/: deps
